# aula2-op-51

./: CMakeLists.txt  main.c  readme.md
definicaoArvore/: estrutura_arvore.c  estrutura_arvore.h
ex1/: ex1.c  ex1.h
ex2/: ex2.c  ex2.h
ex3/: ex3.c  ex3.h
ex4/: ex4.c  ex4.h
ex5/: ex5.c  ex5.h
