cmake_minimum_required(VERSION 3.30)
project(aula2_op_51 C)

set(CMAKE_C_STANDARD 11)

add_executable(aula2_op_51 main.c
        ex1/ex1.c
        ex1/ex1.h
        ex2/ex2.c
        ex2/ex2.h
        ex3/ex3.c
        ex3/ex3.h
        definicaoArvore/estrutura_arvore.c
        definicaoArvore/estrutura_arvore.h
        ex4/ex4.c
        ex4/ex4.h
        ex5/ex5.c
        ex5/ex5.h)
